# vex-client

./: .easignore  .env.example  .gitignore  README.md  SECURITY.md  app.config.ts  app.json  eas.json  eslint.config.mjs  metro.config.js  package-lock.json  package.json  tsconfig.json  versions.json
.vex-stamps/: optimized-images.sha256
android/: build.gradle  gradle.properties  settings.gradle
app/: _layout.tsx  index.tsx  sign-in.tsx
certs/: certificate.pem
ios/: Podfile
macos-native/: Package.swift  README.md
scripts/: android_local_build.sh  bootstrap_amneziawg_android.sh  bootstrap_amneziawg_ios.sh  bootstrap_amneziawg_macos.sh  build_all_local_releases.sh  build_android_release.sh  build_desktop_web_bundle.sh  build_helper.sh  build_linux_release.sh  build_macos_release.sh  build_native_macos_app.sh  build_native_macos_internal_release.sh  build_native_macos_local_release.sh  build_native_macos_pkg.sh  build_native_macos_sparkle_release.sh  build_universal_resources.sh  build_windows_exe_macos.sh  build_windows_release.ps1  dev_prod_api_proxy.mjs  expo_open_ota_generate_certs.sh  generate_release_metadata.sh  install_native_macos_helper_from_app.sh  ios_build_amneziawg_bridge.sh  ios_device_build.sh  ios_mvp_api_smoke.sh  ios_preflight.sh  (+19 more)
src-tauri/: .gitignore  Cargo.toml  amnezia.msi  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: amneziawg-go  awg  awg-quick.sh  install-vex-vpn-helper.sh  vex-helper  vex-vpn-helper.sh
src-tauri/src/: lib.rs
(+241 files in other folders)
