[package]
name = "app"
version = "0.1.35"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "vex-helper"
path = "src/bin/helper.rs"
required-features = ["macos-helper"]

[features]
default = []
macos-helper = []

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2.5.9"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-single-instance = "2"
thiserror = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-local-authentication = "0.3.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Security_Credentials_UI"] }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
